--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,11 +13,11 @@
         <activity android:name=".ChatMainActivity" />
         <activity
             android:name=".LoginActivity"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".HomeActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".explode"
             android:theme="@style/AppTheme.NoActionBar">
@@ -29,7 +29,7 @@
         </activity>
         <activity
             android:name=".EventsActivityDance"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".EventsActivityMusic"
             android:theme="@style/AppTheme.NoActionBar" />
@@ -144,7 +144,7 @@
         <activity
             android:name=".SubEvents.Zephyr"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".SubEvents.Seek"></activity>
+        <activity android:name=".SubEvents.Seek" />
     </application>
 
 </manifest>
